<resources>
    <string name="app_name">goaltracker1</string>
    <string name="til_contrasena">Ingresa Contraseña</string>
    <string name="til_contrasena_olvidada">Ovidaste tu contrasena</string>
    <string name="til_iniciar_sesion">Iniciar sesión</string>
    <string name="til_no_tienes_cuenta_registrate_aqui">No tienes cuenta?Registrate aqui.</string>
    <string name="til_ingresa_tu_correo_electronico">Ingresa tu correo electronico</string>
    <string name="til_correo_electronico">Correo electronico</string>
    <string name="tv_contrasena">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="logo2">logo2</string>
    <string name="logo">logo</string>
    <string name="addgoalsbutton">addgoalsbutton</string>
    <string name="ingresar_contrasena">Ingresar Contraseña</string>

    <!--valores de entrada-->
    <string-array name="sp_details">
        <item>Iniciando 😊</item>
        <item>En proceso 🙄</item>
        <item>Completado 😁</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>